--- a/CSC_p1/enhancements.tex
+++ b/CSC_p1/enhancements.tex
@@ -6,7 +6,7 @@
 \usepackage[margin=0.75in]{geometry}
 
 \title{CSC111 Winter 2024 Project 1}
-\author{TODO: FILL IN YOUR NAME(S) HERE}
+\author{Ali Towaiji, Tanay Langhe}
 \date{\today}
 
 \begin{document}
@@ -17,23 +17,35 @@
 
 \begin{enumerate}
 
-\item Describe your enhancement \#1 here
+\item Math class puzzle
 	\begin{itemize}
-	\item Brief description of what the enhancement is (if it's a puzzle, also describe what steps the player must take to solve it):
+	\item in this puzzle the player must enter the math classroom and answer a math question in order to recive the key.
+	\item This key is then used to enter the locked room which is where you find your Tcart
 	\item Complexity level (choose from low/medium/high):
 	\item Reasons you believe this is the complexity level (e.g. mention implementation details, how much code did you have to add/change from the baseline, what challenges did you face, etc.)
 	% Feel free to add more subheadings if you need
 	\end{itemize}
 
-% Uncomment below section if you have more enhancements; copy-paste as many times as needed
-%\item Describe your enhancement here
-%	\begin{itemize}
-%	\item Basic description of what the enhancement is:
-%	\item Complexity level (low/medium/high):
-%	\item Reasons you believe this is the complexity level (e.g. mention implementation details
-%	% Feel free to add more subheadings if you feel the need
-%	\end{itemize}
 
+\item Find Kit Kat in order to recieve Lucky Pencil
+	\begin{itemize}
+	\item in order to acquire your lucky pencil you need to first enter the bathroom to find a person who for some
+	\item reason has it. They would not let go of the pencil unless you give them a sweet in return. this sweet can
+	\item be found in a robarts study room where you have to solve a puzzle in order to open a lock that has the kit kat
+	\item inside it and then give it to the person, so you finally get your Lucky Pencil
+	\item Complexity level (low/medium/high):
+	\item Reasons you believe this is the complexity level (e.g. mention implementation details
+	% Feel free to add more subheadings if you feel the need
+	\end{itemize}
+
+\item Figure out passcode to Ipad in dorm
+	\begin{itemize}
+	\item in this puzzle you need to use your Ipad in order to print your cheat sheet. but first you have to find your ipad in your dorm room.
+	\item after doing so you need to solve a quick puzzle in order to unlock it so that you can use it to print your cheat sheet at the robarts printing room.
+	\item Complexity level (low/medium/high):
+	\item Reasons you believe this is the complexity level (e.g. mention implementation details
+	% Feel free to add more subheadings if you feel the need
+	\end{itemize}
 \end{enumerate}
 
 
