--- a/CSC_p1/enhancements.tex
+++ b/CSC_p1/enhancements.tex
@@ -27,7 +27,7 @@
 	\end{itemize}
 
 
-\item Find Kit Kat in order to recieve Lucky Pencil
+\item Find KitKat in order to recieve Lucky Pencil
 	\begin{itemize}
 	\item in order to acquire your lucky pencil you need to first enter the bathroom to find a person who for some
 	\item reason has it. They would not let go of the pencil unless you give them a sweet in return. this sweet can
@@ -38,7 +38,7 @@
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
 
-\item Figure out passcode to Ipad in dorm
+\item Figure out passcode to IPad in dorm
 	\begin{itemize}
 	\item in this puzzle you need to use your Ipad in order to print your cheat sheet. but first you have to find your ipad in your dorm room.
 	\item after doing so you need to solve a quick puzzle in order to unlock it so that you can use it to print your cheat sheet at the robarts printing room.
