--- a/CSC_p1/enhancements.tex
+++ b/CSC_p1/enhancements.tex
@@ -26,6 +26,14 @@
 	% Feel free to add more subheadings if you need
 	\end{itemize}
 
+\item Use key to open locked door
+	\begin{itemize}
+	\item in this puzzle the player must enter the math classroom and answer a math question in order to recive the key.
+	\item This key is then used to enter the locked room which is where you find your Tcart
+	\item Complexity level (choose from low/medium/high):
+	\item Reasons you believe this is the complexity level (e.g. mention implementation details, how much code did you have to add/change from the baseline, what challenges did you face, etc.)
+	% Feel free to add more subheadings if you need
+	\end{itemize}
 
 \item Find KitKat in order to recieve Lucky Pencil
 	\begin{itemize}
