--- a/CSC_p1/enhancements.tex
+++ b/CSC_p1/enhancements.tex
@@ -54,6 +54,27 @@
 	\item Reasons you believe this is the complexity level (e.g. mention implementation details
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
+
+
+\item Map Maker
+	\begin{itemize}
+	\item this enhancement adds the ability to check the map and the area numbers.
+	\item it also shows the areas that are blocked (marked by -1).
+	\item also it shows an X at the position which the player is in.
+	\item Complexity level (low/medium/high):
+	\item Reasons you believe this is the complexity level (e.g. mention implementation details
+	% Feel free to add more subheadings if you feel the need
+	\end{itemize}
+
+\item drop item
+	\begin{itemize}
+	\item this enhancement adds the ability to drop an item if the player does not want it.
+	\item Complexity level (low/medium/high):
+	\item Reasons you believe this is the complexity level (e.g. mention implementation details
+	% Feel free to add more subheadings if you feel the need
+	\end{itemize}
+
+
 \end{enumerate}
 
 
