--- a/CSC_p1/enhancements.tex
+++ b/CSC_p1/enhancements.tex
@@ -21,7 +21,7 @@
 	\begin{itemize}
 	\item in this puzzle the player must enter the math classroom and answer a math question in order to recive the key.
 	\item This key is then used to enter the locked room which is where you find your Tcart
-	\item Complexity level (choose from low/medium/high):
+	\item Complexity level high:
 	\item Reasons you believe this is the complexity level (e.g. mention implementation details, how much code did you have to add/change from the baseline, what challenges did you face, etc.)
 	% Feel free to add more subheadings if you need
 	\end{itemize}
@@ -30,7 +30,7 @@
 	\begin{itemize}
 	\item in this puzzle the player must enter the math classroom and answer a math question in order to recive the key.
 	\item This key is then used to enter the locked room which is where you find your Tcart
-	\item Complexity level (choose from low/medium/high):
+	\item Complexity level medium:
 	\item Reasons you believe this is the complexity level (e.g. mention implementation details, how much code did you have to add/change from the baseline, what challenges did you face, etc.)
 	% Feel free to add more subheadings if you need
 	\end{itemize}
@@ -41,7 +41,7 @@
 	\item reason has it. They would not let go of the pencil unless you give them a sweet in return. this sweet can
 	\item be found in a robarts study room where you have to solve a puzzle in order to open a lock that has the kit kat
 	\item inside it and then give it to the person, so you finally get your Lucky Pencil
-	\item Complexity level (low/medium/high):
+	\item Complexity level high:
 	\item Reasons you believe this is the complexity level (e.g. mention implementation details
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
@@ -50,7 +50,7 @@
 	\begin{itemize}
 	\item in this puzzle you need to use your Ipad in order to print your cheat sheet. but first you have to find your ipad in your dorm room.
 	\item after doing so you need to solve a quick puzzle in order to unlock it so that you can use it to print your cheat sheet at the robarts printing room.
-	\item Complexity level (low/medium/high):
+	\item Complexity level high:
 	\item Reasons you believe this is the complexity level (e.g. mention implementation details
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
@@ -61,7 +61,7 @@
 	\item this enhancement adds the ability to check the map and the area numbers.
 	\item it also shows the areas that are blocked (marked by -1).
 	\item also it shows an X at the position which the player is in.
-	\item Complexity level (low/medium/high):
+	\item Complexity level low:
 	\item Reasons you believe this is the complexity level (e.g. mention implementation details
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
@@ -69,7 +69,16 @@
 \item drop item
 	\begin{itemize}
 	\item this enhancement adds the ability to drop an item if the player does not want it.
-	\item Complexity level (low/medium/high):
+	\item Complexity level medium:
+	\item Reasons you believe this is the complexity level (e.g. mention implementation details
+	% Feel free to add more subheadings if you feel the need
+	\end{itemize}
+
+\item use Ipad to get Cheat Sheet
+	\begin{itemize}
+	\item this enhancement adds the ability to trade the ipad for the Cheat sheet.
+	\item You must first get the Ipad then go to robarts printer room and use the Ipad, trading it, to get the Cheat sheet
+	\item Complexity level medium:
 	\item Reasons you believe this is the complexity level (e.g. mention implementation details
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
