--- a/CSC_p1/enhancements.tex
+++ b/CSC_p1/enhancements.tex
@@ -22,7 +22,11 @@
 	\item in this puzzle the player must enter the math classroom and answer a math question in order to recive the key.
 	\item This key is then used to enter the locked room which is where you find your Tcart
 	\item Complexity level high:
-	\item Reasons you believe this is the complexity level (e.g. mention implementation details, how much code did you have to add/change from the baseline, what challenges did you face, etc.)
+	\item this puzzle is high complexity level since it required the management of both the locations items and the players items
+	\item and what the world allowed so it used many classes in order to function.
+	\item also it focused on whether that item was in the correct room and if it was used in the correct location.
+	\item secondly, it utilized a puzzle which are high complexity in our opinion since it required to check the user's
+	\item answer agaisnt a specific question that was derived from the
 	% Feel free to add more subheadings if you need
 	\end{itemize}
 
@@ -31,7 +35,9 @@
 	\item in this puzzle the player must enter the math classroom and answer a math question in order to recive the key.
 	\item This key is then used to enter the locked room which is where you find your Tcart
 	\item Complexity level medium:
-	\item Reasons you believe this is the complexity level (e.g. mention implementation details, how much code did you have to add/change from the baseline, what challenges did you face, etc.)
+	\item this enhancement only allowed you to enter the locked room if key was in the players inventory.
+	\item therefore we had to make a whole systerm that checked if the key was in the players inventory and did not allow
+	\item the player to enter otherwise.
 	% Feel free to add more subheadings if you need
 	\end{itemize}
 
@@ -42,16 +48,25 @@
 	\item be found in a robarts study room where you have to solve a puzzle in order to open a lock that has the kit kat
 	\item inside it and then give it to the person, so you finally get your Lucky Pencil
 	\item Complexity level high:
-	\item Reasons you believe this is the complexity level (e.g. mention implementation details
+	\item the complexity is High because firstly, because it required the management of both the locations items and the
+	\item players items and what the world allowed so it used many classes in order to function.
+	\item also it focused on whether that item was in the correct room and if it was used in the correct location.
+	\item secondly, it utilized a puzzle which are high complexity in our opinion since it required to check the user's
+	\item answer agaisnt a specific question that was derived from the
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
 
 \item Figure out passcode to IPad in dorm
 	\begin{itemize}
-	\item in this puzzle you need to use your Ipad in order to print your cheat sheet. but first you have to find your ipad in your dorm room.
-	\item after doing so you need to solve a quick puzzle in order to unlock it so that you can use it to print your cheat sheet at the robarts printing room.
+	\item in this puzzle you need to use your Ipad in order to print your cheat sheet. Although first you have to find
+	\item your ipad in your dorm room. after doing so you need to solve a quick puzzle in order to unlock it so that you
+	\item can use it to print your cheat sheet at the robarts printing room.
 	\item Complexity level high:
-	\item Reasons you believe this is the complexity level (e.g. mention implementation details
+	\item the complexity is High because firstly, because it required the management of both the locations items and the
+	\item players items and what the world allowed, so it used many classes in order to function.
+	\item also it focused on whether that item was in the correct room and if it was used in the correct location.
+	\item secondly, it utilized a puzzle which are high complexity in our opinion since it required to check the user's
+	\item answer agaisnt a specific question that was derived from the
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
 
@@ -62,7 +77,8 @@
 	\item it also shows the areas that are blocked (marked by -1).
 	\item also it shows an X at the position which the player is in.
 	\item Complexity level low:
-	\item Reasons you believe this is the complexity level (e.g. mention implementation details
+	\item the map maker function was not so difficult it just required a function that looped through the values of the
+	\item map and had an if statement that checked where the player is and marked them on them map with an X
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
 
@@ -70,7 +86,8 @@
 	\begin{itemize}
 	\item this enhancement adds the ability to drop an item if the player does not want it.
 	\item Complexity level medium:
-	\item Reasons you believe this is the complexity level (e.g. mention implementation details
+	\item we believe this has a medium complexity level as we programmed this to specifically drop the item in that certain location.
+	\item this adds the item to that specific location if needed to be picked up again.
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
 
@@ -79,7 +96,9 @@
 	\item this enhancement adds the ability to trade the ipad for the Cheat sheet.
 	\item You must first get the Ipad then go to robarts printer room and use the Ipad, trading it, to get the Cheat sheet
 	\item Complexity level medium:
-	\item Reasons you believe this is the complexity level (e.g. mention implementation details
+	\item the complexity is medium because it required the management of both the locations items and the players items
+	\item and what the world allowed so it used many classes in order to function.
+	\item also it focused on whether that item was in the correct room and if it was used in the correct location
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
 
