--- a/CSC_p1/enhancements.tex
+++ b/CSC_p1/enhancements.tex
@@ -20,24 +20,14 @@
 \item Math class puzzle
 	\begin{itemize}
 	\item in this puzzle the player must enter the math classroom and answer a math question in order to recive the key.
-	\item This key is then used to enter the locked room which is where you find your Tcart
+	\item This key is then used to enter the locked room which is where you find your TCard
 	\item Complexity level high:
 	\item this puzzle is high complexity level since it required the management of both the locations items and the players items
 	\item and what the world allowed so it used many classes in order to function.
-	\item also it focused on whether that item was in the correct room and if it was used in the correct location.
-	\item secondly, it utilized a puzzle which are high complexity in our opinion since it required to check the user's
-	\item answer agaisnt a specific question that was derived from the
-	% Feel free to add more subheadings if you need
-	\end{itemize}
-
-\item Use key to open locked door
-	\begin{itemize}
-	\item in this puzzle the player must enter the math classroom and answer a math question in order to recive the key.
-	\item This key is then used to enter the locked room which is where you find your Tcart
-	\item Complexity level medium:
-	\item this enhancement only allowed you to enter the locked room if key was in the players inventory.
-	\item therefore we had to make a whole systerm that checked if the key was in the players inventory and did not allow
-	\item the player to enter otherwise.
+	\item also it focused on whether the it was that correct item and if it was used in the correct location.
+	\item secondly, the questions produced are not hardecoded but come from the item.txt file meaning to get the right question
+	\item and answer also requires setting up and accesing the correct attributed within the class. Then by using the pick-up
+	\item function it further complicates the code.
 	% Feel free to add more subheadings if you need
 	\end{itemize}
 
@@ -48,11 +38,14 @@
 	\item be found in a robarts study room where you have to solve a puzzle in order to open a lock that has the kit kat
 	\item inside it and then give it to the person, so you finally get your Lucky Pencil
 	\item Complexity level high:
-	\item the complexity is High because firstly, because it required the management of both the locations items and the
+	\item the complexity is High because firstly, it requires the management of both the locations items and the
 	\item players items and what the world allowed so it used many classes in order to function.
-	\item also it focused on whether that item was in the correct room and if it was used in the correct location.
-	\item secondly, it utilized a puzzle which are high complexity in our opinion since it required to check the user's
-	\item answer agaisnt a specific question that was derived from the
+	\item also it focused on whether the it was that correct item and if it was used in the correct location.
+	\item secondly, the questions produced are not hardecoded but come from the item.txt file meaning to get the right question
+	\item and answer also requires setting up and accesing the correct attributed within the class.
+	\item after doing the puzzle, doing the use command KitKat to trade further complexifies the code, requiiring the introduction
+	\item of a new function that works in tandem with the several differnt class attributes accessed and chnaged to operate
+	\item correctly.
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
 
@@ -64,9 +57,12 @@
 	\item Complexity level high:
 	\item the complexity is High because firstly, because it required the management of both the locations items and the
 	\item players items and what the world allowed, so it used many classes in order to function.
-	\item also it focused on whether that item was in the correct room and if it was used in the correct location.
-	\item secondly, it utilized a puzzle which are high complexity in our opinion since it required to check the user's
-	\item answer agaisnt a specific question that was derived from the
+	\item also it focused on whether the it was that correct item and if it was used in the correct location.
+	\item secondly, the questions produced are not hardecoded but come from the item.txt file meaning to get the right question
+	\item and answer also requires setting up and accesing the correct attributed within the class.
+	\item after doing the puzzle, doing the use command on the IPad to trade it further complexifies the code, requiiring
+	\item the introduction of a new function that works in tandem with the several differnt class attributes
+	\item accessed and changed to operate correctly.
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
 
@@ -79,17 +75,6 @@
 	\item Complexity level low:
 	\item the map maker function was not so difficult it just required a function that looped through the values of the
 	\item map and had an if statement that checked where the player is and marked them on them map with an X
-	% Feel free to add more subheadings if you feel the need
-	\end{itemize}
-
-\item use Ipad to get Cheat Sheet
-	\begin{itemize}
-	\item this enhancement adds the ability to trade the ipad for the Cheat sheet.
-	\item You must first get the Ipad then go to robarts printer room and use the Ipad, trading it, to get the Cheat sheet
-	\item Complexity level medium:
-	\item the complexity is medium because it required the management of both the locations items and the players items
-	\item and what the world allowed so it used many classes in order to function.
-	\item also it focused on whether that item was in the correct room and if it was used in the correct location
 	% Feel free to add more subheadings if you feel the need
 	\end{itemize}
 
